--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,59 @@
 ---
-version: 2
+version: 2.1
 
-references:
-  build: &build
+executors:
+  node:
+    parameters:
+      tag:
+        type: string
+        default: latest
     working_directory: ~/build
+    docker:
+      - image: node:<< parameters.tag >>
+  docker:
+    working_directory: /app
+    docker:
+      - image: docker:stable-git
+  drone:
+    working_directory: /app
+    docker:
+      - image: meltwaterfoundation/drone-cli
+
+commands:
+  setup:
+    description: Setup environment
+    parameters:
+      is_alpine:
+        type: boolean
+        default: false
     steps:
-      - run:
-          name: Install Alpine Linux build dependencies
-          command: |
-            if [[ -f /sbin/apk ]]; then
-              apk add --no-cache ca-certificates git openssh-client
-            fi
+      - when:
+          condition: << parameters.is_alpine >>
+          steps:
+            - run:
+                name: Install Alpine Linux build dependencies
+                command: apk add --no-cache ca-certificates git openssh-client
       - checkout
+      - when:
+          condition: << parameters.is_alpine >>
+          steps:
+            - run:
+                name: Save Alpine Linux version
+                command: |
+                  echo "alpine: $(cat /etc/alpine-release)" >> .versions
       - run:
-          name: Save build versions
+          name: Save Node.js and Yarn versions
           command: |
             echo "node: ${NODE_VERSION}" >> .versions
             echo "yarn: ${YARN_VERSION}" >> .versions
-            if [[ -f /sbin/apk ]]; then
-              echo "alpine: $(cat /etc/alpine-release)" >> .versions
-            fi
             cat .versions
+  install:
+    description: Install dependencies
+    parameters:
+      save_cache:
+        type: boolean
+        default: true
+    steps:
       - restore_cache:
           key: yarn-cache-{{ arch }}-{{ checksum ".versions" }}-
       - restore_cache:
@@ -33,62 +66,97 @@ references:
           command: echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' > .npmrc
       - run:
           name: Install dependencies
-          command: yarn install --pure-lockfile
-      - save_cache:
-          key: yarn-cache-{{ arch }}-{{ checksum ".versions" }}-{{ epoch }}
-          paths: ~/.yarn-cache
-      - save_cache:
-          key: node-modules-{{ arch }}-{{ checksum ".versions" }}-{{ checksum "yarn.lock" }}
-          paths: node_modules
+          command: yarn install --frozen-lockfile --non-interactive
+      - when:
+          condition: << parameters.save_cache >>
+          steps:
+            - save_cache:
+                key: yarn-cache-{{ arch }}-{{ checksum ".versions" }}-{{ epoch }}
+                paths: ~/.yarn-cache
+            - save_cache:
+                key: node-modules-{{ arch }}-{{ checksum ".versions" }}-{{ checksum "yarn.lock" }}
+                paths: node_modules
+jobs:
+  test:
+    description: Test Node.js package
+    parameters:
+      tag:
+        type: string
+        default: latest
+      is_alpine:
+        type: boolean
+        default: false
+      upload_coverage:
+        type: boolean
+        default: false
+    executor:
+      name: node
+      tag: << parameters.tag >>
+    steps:
+      - setup:
+          is_alpine: << parameters.is_alpine >>
+      - install
       - run:
           name: Test package
-          command: |
-            if [[ "${TEST_PACKAGE}" == 'true' ]]; then
-              yarn test
-            fi
-      - run:
-          name: Test server
-          command: |
-            if [[ "${TEST_SERVER}" == 'true' ]]; then
-              yarn run test:smoke
-            fi
+          command: yarn test
       - run:
           name: Build package
-          command: |
-            if [[ "${BUILD_PACKAGE}" == 'true' ]]; then
-              yarn run build
-              yarn pack
-            fi
+          command: yarn run build
+      - when:
+          condition: << parameters.upload_coverage >>
+          steps:
+            - run:
+                name: Upload coverage to Codecov
+                command: |
+                  if [[ -n "${CODECOV_TOKEN}" ]]; then
+                    yarn global add codecov
+                    codecov
+                  fi
+  publish:
+    description: Publish Node.js package
+    executor:
+      name: node
+      tag: carbon
+    steps:
+      - setup
+      - install
+      - run:
+          name: Build package
+          command: yarn run build
+      - deploy:
+          name: Publish package
+          command: .circleci/publish.sh
+  package:
+    description: Build Node.js package
+    executor:
+      name: node
+      tag: dubnium
+    steps:
+      - setup
+      - install
+      - run:
+          name: Build package
+          command: yarn run build
+      - run:
+          name: Create package
+          command: yarn pack
       - run:
           name: Extract package
-          command: |
-            if [[ "${BUILD_PACKAGE}" == 'true' ]]; then
-              tar -xzf *.tgz
-            else
-              mkdir package
-            fi
+          command: tar -xzf *.tgz
       - persist_to_workspace:
           root: .
           paths:
             - package
-      - run:
-          name: Upload coverage to Codecov
-          command: |
-            if [[ "${COVERAGE}" == 'true' && -n "${CODECOV_TOKEN}" ]]; then
-              yarn global add codecov
-              codecov
-            fi
-      - deploy:
-          name: Publish package
-          command: |
-            if [[ "${PUBLISH_PACKAGE}" == 'true' ]]; then
-              .circleci/publish.sh
-            fi
-
-  push: &push
-    working_directory: /app
-    docker:
-      - image: docker:stable-git
+  push:
+    description: Build and push Docker container
+    parameters:
+      is_ci:
+        type: boolean
+        default: false
+    executor:
+      name: docker
+    environment:
+      APP_NAME: 'meltwater/app'
     steps:
       - attach_workspace:
           at: /tmp/workspace
@@ -113,91 +181,31 @@ references:
               --build-arg=NPM_TOKEN=$NPM_TOKEN \
               -f .circleci/Dockerfile .
       - deploy:
-          name: Push Docker image to Heroku
-          command: |
-            if [[ -n "${HEROKU_APP}" ]]; then
-              .circleci/push-heroku.sh
-            fi
-      - deploy:
           name: Push Docker image to Bintray
           command: |
             if [[ -n "${BINTRAY_REPOSITORY}" ]]; then
               .circleci/push-bintray.sh
             fi
-      - deploy:
-          name: Push Docker image to ECR
-          command: |
-            if [[ -n "${AWS_ECR_REPOSITORY}" ]]; then
-              .circleci/push-ecr.sh
-            fi
-
-  deploy: &deploy
-    working_directory: /app
-    docker:
-      - image: meltwaterfoundation/drone-cli
-    steps:
-      - run:
-          name: Install Alpine Linux build dependencies
-          command: apk add --no-cache ca-certificates git openssh-client
-      - checkout
-      - deploy:
-          name: Deploy
-          command: |
-            if [[ -n "${DRONE_SERVER}" ]]; then
-              .circleci/deploy.sh
-            fi
-
-  branches: &branches
-    only: /^(v(er)?\/?[0-9].*|master)/
-
-  push-or-publish: &push-or-publish
-    filters:
-      branches:
-        <<: *branches
-    requires:
-      - node-dubnium
-      - node-dubnium-alpine
-      - test-server
-
-jobs:
-  node-dubnium:
-    environment:
-      TEST_PACKAGE: 'true'
-      COVERAGE: 'true'
+      - when:
+          unless: << parameters.is_ci >>
+          steps:
+            - deploy:
+                name: Push Docker image to ECR
+                command: |
+                  if [[ -n "${AWS_ECR_REPOSITORY}" ]]; then
+                    .circleci/push-ecr.sh
+                  fi
+            - deploy:
+                name: Push Docker image to Heroku
+                command: |
+                  if [[ -n "${HEROKU_APP}" ]]; then
+                    .circleci/push-heroku.sh
+                  fi
+  server:
+    description: Smoke test Server
+    working_directory: ~/build
     docker:
       - image: node:dubnium
-    <<: *build
-  node-dubnium-alpine:
-    environment:
-      TEST_PACKAGE: 'true'
-    docker:
-      - image: node:dubnium-alpine
-    <<: *build
-  package:
-    environment:
-      BUILD_PACKAGE: 'true'
-    docker:
-      - image: node:dubnium
-    <<: *build
-  publish:
-    environment:
-      BUILD_PACKAGE: 'true'
-      PUBLISH_PACKAGE: 'true'
-    docker:
-      - image: node:dubnium
-    <<: *build
-  push-ci:
-    environment:
-      APP_NAME: 'meltwater/app'
-      HEROKU_APP: ''
-      AWS_ECR_REPOSITORY: ''
-    <<: *push
-  test-server:
-    environment:
-      TEST_SERVER: 'true'
-      COVERAGE: 'true'
-    docker:
-      - image: node:dubnium-alpine
       - image: $BINTRAY_REGISTRY.bintray.io/$BINTRAY_REPOSITORY:ci.$CIRCLE_SHA1
         environment:
           NODE_ENV: test
@@ -205,32 +213,61 @@ jobs:
         auth:
           username: $BINTRAY_USERNAME
           password: $BINTRAY_PASSWORD
-    <<: *build
-  push:
-    environment:
-      APP_NAME: 'meltwater/app'
-      DEPLOY: 'true'
-    <<: *push
+    steps:
+      - setup
+      - install
+      - run:
+          name: Test server
+          command: yarn run test:smoke
   deploy:
-    <<: *deploy
+    executor:
+      name: drone
+    steps:
+      - setup:
+          is_alpine: true
+      - deploy:
+          name: Deploy
+          command: |
+            if [[ -n "${DRONE_SERVER}" ]]; then
+              .circleci/deploy.sh
+            fi
+
+references:
+  branches: &branches
+    only: /^(v(er)?\/?[0-9].*|master)/
+  push_or_publish: &push_or_publish
+    filters:
+      branches:
+        <<: *branches
+    requires:
+      - test
+      - test-alpine
+      - test-server
 
 workflows:
-  version: 2
   default:
     jobs:
-      - node-dubnium
-      - node-dubnium-alpine
+      - test:
+          name: test
+          tag: dubnium
+      - test:
+          name: test-alpine
+          tag: dubnium-alpine
+          is_alpine: true
       - package
-      - push-ci:
+      - push:
+          name: push-ci
           requires:
             - package
-      - test-server:
+          is_ci: true
+      - server:
+          name: test-server
           requires:
             - push-ci
       - publish:
-          <<: *push-or-publish
+          <<: *push_or_publish
       - push:
-          <<: *push-or-publish
+          <<: *push_or_publish
       - deploy:
           filters:
             branches:
