--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,7 +116,7 @@ jobs:
     description: Publish Node.js package
     executor:
       name: node
-      tag: carbon
+      tag: dubnium
     steps:
       - setup
       - install
