--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,7 +162,7 @@ jobs:
           at: /tmp/workspace
       - checkout
       - setup_remote_docker:
-          version: 18.05.0-ce
+          version: 19.03.8
           docker_layer_caching: true
       - run:
           name: Install build dependencies
