--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,8 +186,8 @@ jobs:
             if [[ -n "${AWS_ECR_REPOSITORY}" ]]; then
               .circleci/push-ecr.sh
             fi
-      - when:
-          unless: << parameters.is_ci >>
+      - unless:
+          condition: << parameters.is_ci >>
           steps:
             - deploy:
                 name: Push Docker image to Bintray
