--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,7 +116,7 @@ jobs:
     description: Publish Node.js package
     executor:
       name: node
-      tag: erbium
+      tag: fermium
     steps:
       - setup
       - install
@@ -130,7 +130,7 @@ jobs:
     description: Build Node.js package
     executor:
       name: node
-      tag: erbium
+      tag: fermium
     steps:
       - setup
       - install
@@ -205,7 +205,7 @@ jobs:
     description: Smoke test Server
     working_directory: ~/build
     docker:
-      - image: node:erbium
+      - image: node:fermium
       - image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${AWS_ECR_REPOSITORY}:ci.$CIRCLE_SHA1
         environment:
           NODE_ENV: test
@@ -246,11 +246,11 @@ workflows:
     jobs:
       - test:
           name: test
-          tag: erbium
+          tag: fermium
           upload_coverage: true
       - test:
           name: test-alpine
-          tag: erbium-alpine
+          tag: fermium-alpine
           is_alpine: true
       - package
       - push:
